<resources>
    <string name="app_name">ElorrietApp</string>
    <string name="hasi_saioa">Hasi saioa</string>
    <string name="erabiltzailea">Erabiltzailea</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pasahitza_Ahaztuta">Pasahitza ahaztuta</string>
    <string name="textErabiltzailea">Erabiltzailea</string>
    <string name="login">Login</string>
    <string name="textPasahitza">Pasahitza</string>
    <string name="argazkia_aldatu">Argazkia aldatu</string>
    <string name="atzera">Atzera</string>
    <string name="taldean_zaude">taldean zaude</string>
    <string name="kaixo">Kaixo</string>
    <string name="irakasleen_ordutegiak">Irakasleen Ordutegiak</string>
    <string name="nire_ordutegiak">Nire ordutegiak</string>
    <string name="irakasle_datuak">Irakasle Datuak</string>
    <string name="ikasle_datuak">Ikasle Datuak</string>
    <string name="bilerak">Bilerak</string>
    <string name="bilerakDetails">Bilerak Xehetasunak</string>
    <string name="bilerakSortu">Bilerak Sortu</string>
    <string name="ikasleen_datuak">Ikasleen Datuak</string>
    <string name="irakasleen_datuak">Irakasleen Datuak</string>
    <string name="profila">Profila</string>
    <string name="Bilatu">Izena...</string>
    <string name="BilatuIrak">Izena...</string>
    <string name="onartuta">Onartuta</string>
    <string name="ezeztatuta">Ezeztatuta</string>
    <string name="gatazka">Gatazka</string>
    <string name="onartzeke">Onartzeke</string>
    <string name="sortu_bilerak">Sortu bilerak</string>
    <string name="Gorde">Gorde</string>
    <string name="Aldatu_Hizkuntza">Aldatu Hizkuntza</string>
    <string name="logout">Itxi saio\n</string>
    <string name="ordutegia">Ordutegiak</string>
    <string name="ordutegiIrakasleak">Irakasleko ordutegiak</string>
    <string name="ordutegiIkasleak">Ikasleko ordutegiak</string>
    <string name="hora">Orduak</string>
</resources>