<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfilaFragment">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="728dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imgAurreikuspena"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/btnArgazkiaAtera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/argazkia_aldatu" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="94dp" />

        <TextView
            android:id="@+id/textIzena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kaixo" />

        <TextView
            android:id="@+id/textTaldea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/taldean_zaude" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp" />

        <Button
            android:id="@+id/btnAtzera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atzera" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>