<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="add"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="screen"
        android:foregroundTint="#924343">

        <TextView
            android:id="@+id/textErabiltzailea"
            android:layout_width="322dp"
            android:layout_height="55dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="264dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/textview_border"
            android:clickable="true"
            android:gravity="center|start|left"
            android:hint="@string/textErabiltzailea"
            android:inputType="text|textNoSuggestions"
            android:paddingStart="20px"
            android:shadowColor="#292929"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LinkPasahitzaAhaztuta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/pasahitza_Ahaztuta"
            android:textColor="@color/MoradoN"
            android:textColorLink="#E63535"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPasahitza"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="187dp"
            android:layout_height="136dp"
            android:layout_marginBottom="52dp"
            android:src="@drawable/eit"
            app:layout_constraintBottom_toTopOf="@+id/textErabiltzailea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96" />

        <ImageView
            android:id="@+id/logoElorrieta"
            android:layout_width="111dp"
            android:layout_height="91dp"
            android:layout_marginTop="140dp"
            android:src="@drawable/elogo"
            app:layout_constraintBottom_toTopOf="@+id/textErabiltzailea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textPasahitza"
            android:layout_width="322dp"
            android:layout_height="55dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/textview_border"
            android:clickable="true"
            android:ems="10"
            android:gravity="center|start|left"
            android:hint="@string/textPasahitza"
            android:imeOptions="actionDone"
            android:inputType="text|textPassword|textAutoComplete|textAutoCorrect|textNoSuggestions"
            android:paddingStart="20px"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textErabiltzailea"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="333dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/MoradoN"
            android:text="@string/hasi_saioa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textErabiltzailea"
            app:layout_constraintVertical_bias="0.44" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>